<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/make_new_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/make_new_member_text"


        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        />


    <TextView
        android:id="@+id/firstname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/make_new_text"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/first_name_string"
        />

    <EditText
        android:id="@+id/firstname_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@id/firstname_title"
        app:layout_constraintTop_toBottomOf="@id/make_new_text"

        android:hint="@string/first_name_edit_hint"/>

    <TextView
        android:id="@+id/lastname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/firstname_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/last_name_string"
        />

    <EditText
        android:id="@+id/lastname_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@id/lastname_title"
        app:layout_constraintTop_toBottomOf="@id/firstname_edit_text"

        android:hint="@string/last_name_edit_hint"/>

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/lastname_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/email_string"
        />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/lastname_edit_text"
        app:layout_constraintLeft_toRightOf="@id/email_title"

        android:hint="@string/email_edit_hint"/>


    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/save_string"

        android:background="@drawable/oval_shape"

        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>