<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/metrics_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/metrics_title"


        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        />

    <TextView
        android:id="@+id/event_name_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_string"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/metrics_welcome_text"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginStart="5dp"
        />

    <EditText
        android:id="@+id/event_name_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/event_name_hint"

        app:layout_constraintLeft_toRightOf="@id/event_name_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metrics_welcome_text"

        android:inputType="text"/>

    <TextView
        android:id="@+id/location_name_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_string"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/event_name_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginStart="5dp"
        />

    <EditText
        android:id="@+id/location_name_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/location_hint"

        app:layout_constraintLeft_toRightOf="@id/location_name_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_name_placeholder"

        android:inputType="text"/>

    <TextView
        android:id="@+id/attendees_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"

        android:text="@string/attendees_title_string"

        app:layout_constraintTop_toBottomOf="@id/location_name_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/attendees_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/attendees_placeholder"

        app:layout_constraintLeft_toRightOf="@id/attendees_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_name_placeholder"/>

    <TextView
        android:id="@+id/people_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"

        android:text="@string/people_title_string"
        app:layout_constraintTop_toBottomOf="@id/attendees_number"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ListView
        android:id="@+id/attendees_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toRightOf="@id/people_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attendees_number">

</ListView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_subdirectory_arrow_left_black_24dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:backgroundTint="@color/colorPrimary"/>


</android.support.constraint.ConstraintLayout>