<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/is_this_you_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/is_this_you_string"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"

        app:layout_constraintTop_toBottomOf="@id/is_this_you_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/face_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:scaleType="fitXY"
        android:adjustViewBounds="true"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yes_button_2"
        app:layout_constraintTop_toBottomOf="@id/person_name"/>

    <Button
        android:id="@+id/yes_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/oval_shape"
        android:text="@string/yes_string"

        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/no_button_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/no_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/oval_shape"
        android:text="@string/no_string"

        android:layout_marginTop="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</android.support.constraint.ConstraintLayout>