<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventHomePage">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/event_string"


        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        />

    <Button
        android:id="@+id/camera_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/camera_string"

        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/metrics_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:background="@drawable/oval_shape"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/metrics_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/oval_shape"
        android:text="@string/metrics_string"

        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metrics_button"


        android:text="@string/close_string"

        android:background="@drawable/red_oval_shape"
        android:textColor="@android:color/black" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_subdirectory_arrow_left_black_24dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:backgroundTint="@color/colorPrimary"/>




</android.support.constraint.ConstraintLayout>
